# footballteams

./: CMakeLists.txt  Team.cpp  Team.hpp  main.cpp  rgb.hpp  terminal.cpp  terminal.hpp
